MFH: Fixed bug #43875 (Two error messages returned for $new and $flag argument in mysql_connect())